--- a/Ex018/MeuCSS.css
+++ b/Ex018/MeuCSS.css
@@ -4,6 +4,7 @@
     src: url(Fontes/Bloody\ Frozen.otf) format('opentype'), url('Bloody\ Frozen.ttf');
 }
 body{
+    background-image: url(midia/fundo.png);
     background-color: rgb(94, 12, 119);
     font-family: Arial, Helvetica, sans-serif;
     font-size: normal 20px;
