--- a/Ex023/MeuCSS.css
+++ b/Ex023/MeuCSS.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body{
+    background-image: url(midias/Imagem\ sem\ título.png);
     background-color: #8F95D3;
 }
 div{/* Comando para alterar especificamente o que está dentro de div*/
