--- a/Desafios3/MeuCSS.css
+++ b/Desafios3/MeuCSS.css
@@ -1,12 +1,29 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
 body{
     background-color: rgb(221, 219, 219);
     background-image: url(midia/imagens/background001.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-size: 28px;
 }
+section p{
+    font-family: 'Rubik Gemstones', cursive;
+    font-size: 32px;
+}
+article p{
+    font-family: 'Dancing Script', cursive;
+    color: black;
+    font-size: 36px;
+}
+main p{
+    font-family: 'Shadows Into Light', cursive;
+
+}
+
 body main{
     background-image: url(midia/imagens/background002.jpg);
     padding: 5px 5px 5px 5px;
@@ -27,6 +44,8 @@ nav p{
     color: white;
     margin: -8px;
     padding: 23px;
+    font-family: 'Dancing Script', cursive;
+    font-size: 28px;
 }
 nav a{
     text-decoration: none;
@@ -43,7 +62,7 @@ article{
 section{
     background-color: rgba(0, 0, 0, 0.582);
     color: white;
-    margin: 40px;
+    margin: 121px;
     padding: 110px;
     text-align: right;
     }
