--- a/Desafios3/MeuCSS.css
+++ b/Desafios3/MeuCSS.css
@@ -57,14 +57,31 @@ article{
     padding: 25px;
     box-shadow: 2px 0px 12px 1px;
 }
-
+section.a1{
+    text-align: left;
+    width: 249px;
+    height: 424px;
+    background-color: rgba(0, 0, 0, 0.452);
+}
+section#a2{
+    text-align: left;
+    display: inline-block;
+    width: 249px;
+    height: 424px;
+    background-color: rgba(0, 0, 0, 0.452);
+}
+section#a3{
+    text-align: left;
+    width: 251px;
+    height: 546px;
+    background-color: rgba(0, 0, 0, 0.452);
+}
 
 section{
-    background-color: rgba(0, 0, 0, 0.582);
     color: white;
     margin: 121px;
     padding: 110px;
-    text-align: right;
+    
     }
     
 footer{
