--- a/Desafios3/MeuCSS.css
+++ b/Desafios3/MeuCSS.css
@@ -10,6 +10,10 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+*{
+    margin: auto;
+    padding: auto;
+}
 section p{
     font-family: 'Rubik Gemstones', cursive;
     font-size: 32px;
